# hippo

./: .gitignore  Cargo.toml  README.md
src/: commons.rs  list.rs  main.rs  snap.rs  utils.rs
src/journaling/: journal.rs  managed_file.rs  managed_file_journal.rs  mod.rs  snaps.rs
src/utils/: mod.rs  simple_file_records.rs
